--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview"
   },
+  "workspaces": [
+    "internal/*"
+  ],
   "dependencies": {
     "element-plus": "^2.1.10",
     "dayjs": "^1.10.7",
@@ -17,17 +20,15 @@
   },
   "devDependencies": {
     "@types/node": "^17.0.26",
-    "@typescript-eslint/eslint-plugin": "^5.20.0",
-    "@typescript-eslint/parser": "^5.20.0",
     "@vitejs/plugin-vue": "^2.3.1",
-    "eslint": "^8.14.0",
-    "eslint-plugin-vue": "^8.7.1",
     "sass": "^1.50.1",
     "typescript": "^4.5.4",
     "unplugin-auto-import": "^0.7.1",
     "unplugin-vue-components": "^0.19.3",
     "vite": "^2.9.5",
-    "vite-plugin-eslint": "^1.6.0",
-    "vue-tsc": "^0.34.7"
+    "vue-tsc": "^0.34.7",
+    "unplugin-vue-define-options": "^0.6.1",
+    "@common/eslint-config": "workspace:*",
+    "eslint": "^8.13.0"
   }
 }
