--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
       "@/*": ["src/*"]
     },
     "skipLibCheck": true,
-    "types": ["element-plus/global"]
+    "types": ["element-plus/global", "unplugin-vue-define-options"]
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue","auto-imports.d.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
