--- a/internal/eslint-config/package.json
+++ b/internal/eslint-config/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
+    "prettier": "^2.6.2",
     "eslint-config-prettier": "^8.5.0",
     "eslint-define-config": "^1.3.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
