--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "dayjs": "^1.10.7",
     "vue": "^3.2.25",
     "vue-router": "^4.0.14",
-    "vuex": "^4.0.2",
+    "pinia": "^2.0.14",
     "axios": "^0.24.0"
   },
   "devDependencies": {
