--- a/package.json
+++ b/package.json
@@ -1,38 +1,41 @@
 {
   "name": "pc-element-template",
-  "private": true,
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview"
+    "build": "run-p type-check build-only",
+    "preview": "vite preview --port 4173",
+    "build-only": "vite build",
+    "type-check": "vue-tsc --noEmit",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
-  "workspaces": [
-    "internal/*"
-  ],
   "dependencies": {
-    "element-plus": "^2.1.10",
-    "dayjs": "^1.10.7",
-    "vue": "^3.2.25",
-    "vue-router": "^4.0.14",
-    "pinia": "^2.0.14",
-    "axios": "^0.24.0"
+    "axios": "^0.27.2",
+    "element-plus": "^2.2.14",
+    "lodash": "^4.17.21",
+    "mockjs": "^1.1.0",
+    "pinia": "^2.0.17",
+    "vue": "^3.2.37",
+    "vue-router": "^4.1.3"
   },
   "devDependencies": {
-    "@types/node": "^17.0.26",
-    "@vitejs/plugin-vue": "^2.3.1",
-    "sass": "^1.50.1",
-    "typescript": "^4.5.4",
-    "unplugin-auto-import": "^0.7.1",
-    "unplugin-vue-components": "^0.19.3",
-    "vite": "^2.9.5",
-    "vue-tsc": "^0.34.7",
-    "unplugin-vue-define-options": "^0.6.1",
-    "@common/eslint-config": "workspace:*",
-    "eslint": "^8.13.0",
-    "mockjs": "^1.1.0",
+    "@rushstack/eslint-patch": "^1.1.4",
+    "@types/lodash": "^4.14.184",
+    "@types/node": "^16.11.47",
+    "@vitejs/plugin-vue": "^3.0.1",
+    "@vue/eslint-config-typescript": "^11.0.0",
+    "@vue/tsconfig": "^0.1.3",
+    "eslint": "^8.21.0",
+    "eslint-plugin-vue": "^9.3.0",
+    "npm-run-all": "^4.1.5",
+    "sass": "^1.54.5",
+    "terser": "^5.14.2",
+    "typescript": "~4.7.4",
+    "unplugin-auto-import": "^0.11.2",
+    "unplugin-vue-components": "^0.22.4",
+    "vite": "^3.0.4",
+    "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-mock": "^2.9.6",
-    "vite-plugin-optimize-persist": "^0.1.2",
-    "vite-plugin-package-config": "^0.1.1"
+    "vue-tsc": "^0.39.5"
   }
 }
