--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint": "^8.21.0",
     "eslint-plugin-vue": "^9.3.0",
     "npm-run-all": "^4.1.5",
+    "rollup-plugin-visualizer": "^5.8.0",
     "sass": "^1.54.5",
     "terser": "^5.14.2",
     "typescript": "~4.7.4",
