🐎 ci: 增加生产环境下mock配置

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 VITE_API_URL = '/api'
 VITE_IS_HTTPS = false
 VITE_TOKEN_REFRESH = false
+# 文件file地址
+VITE_APP_FILE_API = 'http://112.11.139.238:30016'
