--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@types/node": "^16.11.47",
     "@vitejs/plugin-vue": "^3.0.1",
     "@vue/eslint-config-typescript": "^11.0.0",
+    "@vue/eslint-config-prettier": "^7.0.0",
+    "prettier": "2.7.1",
     "@vue/tsconfig": "^0.1.3",
     "eslint": "^8.21.0",
     "eslint-plugin-vue": "^9.3.0",
